adição de cadastro e login no angular

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
 	"bugs": {
 		"url": "https://github.com/caiqueoak03/Projeto-PI-Grupo-5/issues"
 	},
-	"homepage": "https://github.com/caiqueoak03/Projeto-PI-Grupo-5#readme"
+	"homepage": "https://github.com/caiqueoak03/Projeto-PI-Grupo-5#readme",
+	"devDependencies": {
+		"typescript": "^4.8.3"
+	}
 }
