--- a/client-side/package.json
+++ b/client-side/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 8080",
+    "start": "ng serve --port 8080 -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
