--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,46 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
-client-side/dist
-client-side/tmp
-client-side/out-tsc
-client-side/bazel-out
+/client-side/dist
+/client-side/tmp
+/client-side/out-tsc
+/client-side/bazel-out
+/client-side/src/views
 
 # Node
-client-side/node_modules
-client-side/npm-debug.log
-client-side/yarn-error.log
-server-side/node_modules
-server-side/npm-debug.log
-server-side/yarn-error.log
+/client-side/node_modules
+/client-side/npm-debug.log
+/client-side/yarn-error.log
+/server-side/node_modules
+/server-side/npm-debug.log
+/server-side/yarn-error.log
 
 # IDEs and editors
-client-side/.idea/
-client-side/.project
-client-side/.classpath
-client-side/.c9/
-client-side/*.launch
-client-side/.settings/
-client-side/*.sublime-workspace
+/client-side/.idea/
+/client-side/.project
+/client-side/.classpath
+/client-side/.c9/
+/client-side/*.launch
+/client-side/.settings/
+/client-side/*.sublime-workspace
 
-# Visual Studio Code
+# Visual Studio /Code
 client-side/.vscode/*
-client-side/!.vscode/settings.json
-client-side/!.vscode/tasks.json
-client-side/!.vscode/launch.json
-client-side/!.vscode/extensions.json
-client-side/.history/*
+/client-side/!.vscode/settings.json
+/client-side/!.vscode/tasks.json
+/client-side/!.vscode/launch.json
+/client-side/!.vscode/extensions.json
+/client-side/.history/*
 
 # Miscellaneous
-client-side/.angular/cache
-client-side/sass-cache/
-client-side/connect.lock
-client-side/coverage
-client-side/libpeerconnection.log
-client-side/testem.log
-client-side/typings
+/client-side/.angular/cache
+/client-side/sass-cache/
+/client-side/connect.lock
+/client-side/coverage
+/client-side/libpeerconnection.log
+/client-side/testem.log
+/client-side/typings
 
 # System files
-client-side/.DS_Store
-client-side/Thumbs.db
+/client-side/.DS_Store
+/client-side/Thumbs.db
