--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 /client-side/tmp
 /client-side/out-tsc
 /client-side/bazel-out
-/server-side/src/views/*
+/server-side/src/views
+server-side/src/views
 
 # Node
 /client-side/node_modules
