--- a/client-side/package.json
+++ b/client-side/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "cli": "npm install -g @angular/cli"
+    "cli": "npm i -g @angular/cli@14.x"
   },
   "private": true,
   "dependencies": {
