--- a/client-side/package.json
+++ b/client-side/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve --port 3030 -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "cli": "npm i -g @angular/cli@14.x"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
