--- a/.github/workflows/main_arfas-oversight.yml
+++ b/.github/workflows/main_arfas-oversight.yml
@@ -5,8 +5,10 @@ name: Arfas Oversight - Web App
 
 on:
   push:
-    branches:
-      - main
+    paths:
+      - 'client-side/**'
+      - 'server-side/**'
+      - 'package.json'
   workflow_dispatch:
 
 jobs:
