--- a/server-side/package.json
+++ b/server-side/package.json
@@ -29,7 +29,10 @@
 		"mysql2": "^2.2.5",
 		"nodemailer": "^6.7.8",
 		"nodemailer-express-handlebars": "^5.0.0",
-		"path": "^0.12.7"
+		"path": "^0.12.7",
+		"node-fetch": "^3.2.10",
+		"cross-fetch": "^3.1.5"
+
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.7"
