--- a/server-side/package.json
+++ b/server-side/package.json
@@ -25,6 +25,7 @@
 		"express": "^4.17.1",
 		"jquery": "^3.6.1",
 		"mssql": "^7.1.3",
+		"msnodesqlv8": "^2.6.0",
 		"mysql": "^2.18.1",
 		"mysql2": "^2.2.5",
 		"nodemailer": "^6.7.8",
@@ -32,7 +33,6 @@
 		"path": "^0.12.7",
 		"node-fetch": "^3.2.10",
 		"cross-fetch": "^3.1.5"
-
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.7"
