--- a/client-side/package.json
+++ b/client-side/package.json
@@ -22,8 +22,7 @@
     "ng2-charts": "^4.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "chartjs-plugin-labels": "^1.1.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.3",
