--- a/.github/workflows/main_arfas-oversight.yml
+++ b/.github/workflows/main_arfas-oversight.yml
@@ -25,20 +25,20 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm run installDependecies
-          npm run build --if-present
+            npm run installDependecies
+            npm run build --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: ./server-side
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -51,7 +51,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'arfas-oversight'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_537D42C498BD4830A0771A6C3236F7DA }}
+          app-name: 'arfasOversight'
+          slot-name: 'production'
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_c4555b9d1dac4db791ccacae74b1afbf }}
           package: .
