--- a/.github/workflows/main_arfas-oversight.yml
+++ b/.github/workflows/main_arfas-oversight.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: '14.x'
 
-      - name: npm install, build, and test
+      - name: npm install and build
         run: |
             npm run installDependecies
             npm run build --if-present
