--- a/.github/workflows/main_arfasoversight.yml
+++ b/.github/workflows/main_arfasoversight.yml
@@ -4,9 +4,11 @@
 name: Build and deploy Node.js app to Azure Web App - arfasOversight
 
 on:
-  push:
-    branches:
-      - main
+#   push:
+#     paths:
+#       - 'client-side/**'
+#       - 'server-side/**'
+#       - 'package.json'
   workflow_dispatch:
 
 jobs:
@@ -23,9 +25,8 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
+          npm run installDependecies
           npm run build --if-present
-          npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
