--- a/.github/workflows/main_arfas-oversight.yml
+++ b/.github/workflows/main_arfas-oversight.yml
@@ -1,12 +1,14 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - arfas-oversight
+name: Arfas Oversight - Web App
 
 on:
-  push:
-    branches:
-      - main
+#   push:
+#     paths:
+#       - 'client-side/**'
+#       - 'server-side/**'
+#       - 'package.json'
   workflow_dispatch:
 
 jobs:
@@ -21,11 +23,11 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: npm install, build, and test
+      - name: npm install and build
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run install
+          npm run build --prod
+        working-directory: .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
