--- a/.github/workflows/main_arfas-oversight.yml
+++ b/.github/workflows/main_arfas-oversight.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: npm install and build
         run: |
-          npm run install
+          npm run installDependecies
           npm run build --prod
         working-directory: .
 
