--- a/server-side/package.json
+++ b/server-side/package.json
@@ -25,16 +25,14 @@
 		"express": "^4.17.1",
 		"jquery": "^3.6.1",
 		"mssql": "^7.1.3",
+		"nodemailer": "^6.7.8",
+		"nodemailer-express-handlebars": "^5.0.0",
+		"path": "^0.12.7"
+	},
+	"devDependencies": {
 		"msnodesqlv8": "^2.6.0",
 		"mysql": "^2.18.1",
 		"mysql2": "^2.2.5",
-		"nodemailer": "^6.7.8",
-		"nodemailer-express-handlebars": "^5.0.0",
-		"path": "^0.12.7",
-		"node-fetch": "^3.2.10",
-		"cross-fetch": "^3.1.5"
-	},
-	"devDependencies": {
 		"nodemon": "^2.0.7"
 	}
 }
