--- a/client-side/package.json
+++ b/client-side/package.json
@@ -18,11 +18,16 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@azure/identity": "^3.1.0",
+    "@azure/storage-blob": "^12.12.0",
     "chart.js": "^3.9.1",
+    "dotenv": "^16.0.3",
     "ng2-charts": "^4.0.1",
+    "parse-multipart": "^1.0.4",
     "rxjs": "~7.5.0",
     "set-interval-async": "^3.0.2",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -30,6 +35,7 @@
     "@angular/cli": "~14.2.3",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
+    "@types/uuid": "^8.3.4",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
